--- a/2025-12-03/regression.ipynb
+++ b/2025-12-03/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "9243c79b",
    "metadata": {},
    "outputs": [
@@ -25,18 +25,12 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
     "# Strumenti Scikit-Learn (Solo quelli studiati finora)\n",
     "from sklearn.datasets import fetch_california_housing\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, LassoCV\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
-    "from base_data_handler import BaseDataHandler\n",
+    "from utils.base_data_handler import BaseDataHandler\n",
     "from math import radians, sin, cos, sqrt, atan2\n",
     "\n",
     "# Configurazione grafica\n",
@@ -100,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "41e3c616",
    "metadata": {},
    "outputs": [
@@ -223,6 +217,9 @@
     "y_pred_test = model.predict(X_test)\n",
     "y_pred_test = np.clip(model.predict(X_test), 0, 5)\n",
     "\n",
+    "\"\"\" y_test = np.expm1(y_test)\n",
+    "y_pred_test = np.expm1(y_pred_test)\n",
+    " \"\"\"\n",
     "# Metrics on test set\n",
     "r2 = r2_score(y_test, y_pred_test)\n",
     "rmse = np.sqrt(mean_squared_error(y_test, y_pred_test))\n",
