random fores with xgboost and cuda support. added functions utils file and strenghten base_data_handler functionalities

--- a/2025-12-03/linear_regression_california.ipynb
+++ b/2025-12-03/linear_regression_california.ipynb
@@ -259,6 +259,28 @@
     "print(\"\\n--- Influential Features ---\")\n",
     "print(top_features)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "89e8c700",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, None)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "handler.try_update_og_df()\n",
+    "handler.try_save_to_csv(name=\"california_housing_clean\")"
+   ]
   }
  ],
  "metadata": {
