--- a/2025-12-09/xgb_lgbm_cat_california.ipynb
+++ b/2025-12-09/xgb_lgbm_cat_california.ipynb
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d4f86352",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
     "print(\"---------------------------------------\")\n",
     "\n",
     "\n",
-    "fig, ax = functions.get_prediction_graph({'california_random_forest':(None, y_pred_final_stacked)}, y_test=y_test)"
+    "fig, ax = functions.get_prediction_graph({'California House: Xgb/LGBM/Cat':(None, y_pred_final_stacked)}, y_test=y_test)"
    ]
   }
  ],
